fixed menu collapsing

--- a/app/public/nonsecure/css/app.css
+++ b/app/public/nonsecure/css/app.css
@@ -7,3 +7,4 @@ body {
   padding: 40px 15px;
   text-align: center;
 }
+.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
